--- a/js-projeto-de-vida-codigo-base/style.css
+++ b/js-projeto-de-vida-codigo-base/style.css
@@ -59,25 +59,48 @@ body {
 .botoes {
     display: block;
 }
-.ativo{
+.botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
 
-.abas-textos{
-    background-color: var(--texto-fundo);
+.aba-texto{
+background-color: var(--texto-fundo);
+padding: 40px;
+border-radius: 0 0 40px 40px;
+}
+
+.aba-conteudo.ativo{
+    display: block;
+}
+.aba-conteudo{
+    display: none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) {
-    .botoes {
+   
+    .botoes{
         display: flex;
     }
-    
+    }
+
     .botao:first-child {
         border-radius: 40px 0 0 0;
+
     }
 
     .botao:last-child {
-        border-radius: 0 40px 0 0;
+        border-radius:  0 40px 0 0;
+
     }
-}
